# DZ30

./: db.sqlite3  manage.py  pyproject.toml
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  cat.py  sel.py
ads/views/: ad.py  cat.py  sel.py
data/: ads.json  csv_to_json.py
djangoDZ27/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
